changed the show text lenght from 50 words to 150 characters for more uniformity when showing story cards

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wiki-traversy",
+  "name": "mongo-express-node-googleoauth-crud-app",
   "version": "1.0.0",
   "description": "CRUD app using Mongo Express Node GoogleAuth Handlebars",
   "main": "app.js",
